crates/swc_css_parser/tests/errors/rome/invalid/selector8/output.stderr
error: Expected identifier in id selector
 --> $DIR/tests/errors/rome/invalid/selector8/input.css:1:1
  |
1 | #1234 {
  | ^^^^^

